# daisy

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/superpowers/plans/: 2026-04-26-daisy-cli.md
docs/superpowers/specs/: 2026-04-26-daisy-cli-design.md
skills/: SKILL.md
src/daisy/: __init__.py  cli.py  config.py  database.py  embeddings.py  parser.py  search.py
tests/: __init__.py  test_cli.py  test_config.py  test_database.py  test_embeddings.py  test_parser.py  test_search.py
tests/fixtures/: raw_schema.txt  sample_queries.json  sample_schema.txt
